--- a/index.html
+++ b/index.html
@@ -68,15 +68,18 @@
   <div class="container">
     <h1>Services & Prices</h1>
     <div id="price-container">
-      <!-- prices will load here -->
+      <!-- JS will load data here -->
     </div>
   </div>
 
   <script>
-    const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRMEChUNhVNEJNOm7BRaWcMQMbdqPIV8bSIS1RbphXRagM_SzHcML96D_Kaayq8v8sh8nh5oJfaNc3z/pub?output=csv";
+    const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQTfKgvuHp9_SAVZ7Tuc-DXx2nmp0NMrvwHB2nIxQd0v9tXpH8m_O32EqlRSt7j18HIR1jRV8Q-dXDb/pub?output=csv";
 
     fetch(sheetURL)
-      .then(res => res.text())
+      .then(res => {
+        if (!res.ok) throw new Error("Fetch failed");
+        return res.text();
+      })
       .then(csv => {
         const rows = csv.trim().split("\n").slice(1); // skip header
         let html = "";
@@ -92,6 +95,10 @@
           }
         });
         document.getElementById("price-container").innerHTML = html;
+      })
+      .catch(err => {
+        console.error("Failed to load prices:", err);
+        document.getElementById("price-container").innerHTML = "<p style='color:red;'>Failed to load prices.</p>";
       });
   </script>
 </body>
